--- a/public/assets/portal/css/casino.css
+++ b/public/assets/portal/css/casino.css
@@ -1,35 +1,60 @@
+body {
+    background-color: #000;
+}
+
 .casino-container {
+    margin: 5px auto;
     background-color: #242424;
-    border-radius: 20px;
-    width: 95%;
+    border-radius: 20px 20px 0 0;
 }
 
 .casino-container-contentHeader {
+    height: 50px;
 }
 
 .casino-container-content {
+    padding-bottom: 8px;
 }
 
 .casino-box-header {
     background-color: #0C369A;
     color: #FFF;
     height: 45px;
+    line-height: 45px;
+    padding: 0 40px;
+    font-weight: bold;
+    font-size: 120%;
 }
 
 .casino-box {
     background-color: #353535;
+    height: 175px;
+    border-radius: 0 0 12px 12px;
 }
 
 .casino-box-game {
+    display: inline-block;
+    width: 250px;
+    height: 135px;
+    margin: 20px 20px;
+}
+
+.casino-iframe-game {
+    display: inline-block;
     cursor: pointer;
-    background: none;
     border: 0;
+    width: 250px;
+    height: 125px;
+    border-radius: 15px;
 }
 
 .casino-text-gameLabel {
+    color: #FFF;
+    margin-left: 10px;
 }
 
 .casino-button {
+    display: inline-block;
     color: #FFF;
     height: 25px;
     font-size: 85%;
@@ -37,12 +62,16 @@
     border: 1px solid #fff;
     background: none;
     text-align: center;
+    margin: auto 0;
 }
 
 .casino-button-favorite {
+    color: #FFF;
     cursor: pointer;
     background: none;
     border: 0;
+    float: right;
+    margin-right: 5px;
 }
 
 
