--- a/public/assets/portal/css/casino.css
+++ b/public/assets/portal/css/casino.css
@@ -1,15 +1,24 @@
 body {
     background-color: #000;
 }
+.casino-container * {
+    text-shadow: 1px 1px 1px #343434;
+}
 
 .casino-container {
     margin: 5px auto;
     background-color: #242424;
-    border-radius: 20px 20px 0 0;
+    border-radius: 20px;
+    width: 950px;
 }
 
+.casino-container-header {
+    height: 30px;
+    padding: 10px;
+    box-sizing: border-box;
+}
 .casino-container-contentHeader {
-    height: 50px;
+    padding-bottom: 8px;
 }
 
 .casino-container-content {
@@ -17,33 +26,45 @@ body {
 }
 
 .casino-box-header {
+    margin: 20px auto 0;
     background-color: #0C369A;
     color: #FFF;
-    height: 45px;
-    line-height: 45px;
+    height: 35px;
+    line-height: 35px;
     padding: 0 40px;
+    box-sizing: border-box;
     font-weight: bold;
-    font-size: 120%;
+    width: 940px;
 }
 
 .casino-box {
+    margin: 0 auto;
     background-color: #353535;
     height: 175px;
     border-radius: 0 0 12px 12px;
+    width: 940px;
 }
 
 .casino-box-game {
-    display: inline-block;
-    width: 250px;
+    width: 180px;
     height: 135px;
     margin: 20px 20px;
 }
 
+.casino-box-carousel {
+    float: left;
+    width: 845px;
+}
+
+.casino-box-navigation {
+    float: left;
+    width: 45px;
+}
+
 .casino-iframe-game {
-    display: inline-block;
     cursor: pointer;
     border: 0;
-    width: 250px;
+    width: 180px;
     height: 125px;
     border-radius: 15px;
 }
@@ -62,7 +83,7 @@ body {
     border: 1px solid #fff;
     background: none;
     text-align: center;
-    margin: auto 0;
+    margin: auto 10px;
 }
 
 .casino-button-favorite {
@@ -74,5 +95,21 @@ body {
     margin-right: 5px;
 }
 
+.casino-button-prev, .casino-button-next {
+    font-size: 150%;
+    margin: 45px 10px;
+    font-weight: bold;
+    border: none;
+    background: none;
+    color: #aaa8a9;
+    height: 80px;
+}
 
+.casino-button-prev {
+    float: left;
+}
+
+.casino-button-next {
+    float: right;
+}
 
