Added: casino_allGames & casino_games templates

--- a/public/assets/portal/css/casino/casino.css
+++ b/public/assets/portal/css/casino/casino.css
@@ -26,11 +26,11 @@ body {
 .casino-container-menu {
     float: left;
     width: 16%;
-    height: 500px;
+    min-height: 100px;
     background: #242424;
     border-radius: 15px;
     box-sizing: border-box;
-    padding: 10px 5px;
+    padding: 20px 5px;
     border: 1px solid #393939;
     /*min-width: 180px;*/
 }
@@ -57,6 +57,7 @@ body {
     box-sizing: border-box;
     font-weight: bold;
     text-align: left;
+    text-transform: uppercase;
 }
 
 .casino-box {
@@ -128,7 +129,6 @@ body {
     float: left;
     font-size: 200%;
 }
-
 
 .casino-button-next {
     float: right;
