--- a/public/assets/portal/templates/casino_allGames.html
+++ b/public/assets/portal/templates/casino_allGames.html
@@ -8,7 +8,7 @@
             <div class="casino-box-game">
                 <a href="#"><img class="casino-image-game" src="{{image_url}}"></a>
                 <span class="casino-text-gameLabel">{{name}}</span>
-                <button class="fa fa-star casino-button-favorite"></button>
+                <button class="fa fa-star casino-button-favorite" data-type="favorite"></button>
             </div>
             {{/each}}
         </div>
