--- a/public/assets/portal/css/sports/sports.css
+++ b/public/assets/portal/css/sports/sports.css
@@ -178,6 +178,7 @@
 
 	border:1px solid #001345;
 
+
 }
 
 
@@ -681,21 +682,14 @@
 	border-radius:10px;
 
 	border:1px solid #000;
-
 	padding:10px 0;
-
 	margin-bottom:10px;
-
 }
 
-
-
 .aposta-box-botao .jogo-box-botao{
-
 	margin:0;
-
+	cursor: pointer;
 	text-align:right;
-
 }
 
 
