--- a/public/assets/portal/css/faqs/style.css
+++ b/public/assets/portal/css/faqs/style.css
@@ -69,8 +69,18 @@ body{
 .footer .btn {
     border: none;
 }
+/* Content */
+.content {
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 30px 15px;
+    text-align: justify;
+}
+.content ul {
+    padding: 5px 30px;
+}
 
-
+/* MIX */
 .btn {
     line-height: 30px;
     float: left;
