--- a/public/assets/portal/css/faqs/style.css
+++ b/public/assets/portal/css/faqs/style.css
@@ -13,6 +13,7 @@ html, body, .faqs-content
     height:100%;
 }
 body{
+    background: #f2f2f2;
     padding-bottom: 0 !important;
 }
 /* HEADER */
@@ -71,8 +72,10 @@ body{
 }
 /* Content */
 .content {
+    background: #ffffff;
     margin: 0 auto;
     max-width: 800px;
+    min-height: 450px;
     padding: 30px 15px;
     text-align: justify;
 }
