Added Rules for Casino.

--- a/public/assets/portal/css/faqs/style.css
+++ b/public/assets/portal/css/faqs/style.css
@@ -118,6 +118,7 @@ body{
 }
 .content .menu li a.sel {
     color: #000000;
+    text-decoration: underline;
 }
 .content .middle {
     position: relative;
