--- a/public/assets/portal/css/style.css
+++ b/public/assets/portal/css/style.css
@@ -1049,3 +1049,35 @@ input.cmn-toggle-round:checked + label:after {
     border: 1px solid #bbb;
     border-left: 0;
 }
+.layer-loading-block {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #000000;
+    opacity: 0.3;
+    -webkit-transition: background 0.4s;
+    -moz-transition: background 0.4s;
+    -o-transition: background 0.4s;
+    transition: background 0.4s;
+}
+.layer-loading-block div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -100px;
+    width: 200px;
+    height: 200px;
+    text-align: center;
+}
+.layer-loading-block .fa {
+    font-size: 100px;
+    color: #ffffff;
+}
+.layer-loading-block span {
+    display: block;
+    color: #ffffff;
+    font-size: 40px;
+}
