--- a/public/assets/portal/css/style.css
+++ b/public/assets/portal/css/style.css
@@ -224,7 +224,7 @@ button {
 }
 /****** FONT COLORS *******/
 .brand-color {
-    color: #019fe9;
+    color: #112149;
 }
 .brand-rev-color {
     color: #054c6d;
@@ -249,7 +249,7 @@ button {
 }
 /****** BORDER'S COLOR *******/
 .brand-border {
-    border-color: #019fe9;
+    border-color: #112149;
 }
 .brand-rev-border {
     border-color: #054c6d;
@@ -277,7 +277,7 @@ button {
 }
 /****** BACKS *******/
 .brand-back {
-    background-color: #019fe9;
+    background-color: #112149;
 }
 .brand-rev-back {
     background-color: #054c6d;
@@ -445,7 +445,7 @@ button {
     color: #000 !important;
 }
 #menu-active {
-    color: #019fe9;
+    color: #112149;
 }
 .board-menu-div {
     display: inline-block;
@@ -651,9 +651,9 @@ button {
     margin: 0 auto 15px auto;
 }
 .footer-menu li:hover, .brand-botao-rev:hover, .brand-botao, .brand-botao-rev2:hover {
-    border: 1px solid #019fe9;
+    border: 1px solid #112149;
     color: #fff;
-    background-color: #019fe9;
+    background-color: #112149;
     text-align: center;
 }
 .footer-menu-option {
@@ -962,7 +962,7 @@ input.cmn-toggle-round + label:after {
     transition: margin 0.4s;
 }
 input.cmn-toggle-round:checked + label:before {
-    background-color: #019fe9;
+    background-color: #112149;
 }
 input.cmn-toggle-round:checked + label:after {
     margin-left: 20px;
