--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,12 +1,15 @@
-
 @import (less) "old.less";
+@navbar-color-active: #000000;
+@navbar-color: #ffffff;
+@navbar-back-color: #112149;
 
 .bs-wp {
   nav {
     display: block;
   }
   .navbar-default {
-    background-color: #112149;
+    padding: 15px 0;
+    background-color: @navbar-back-color;
 
     .navbar-collapse {
       text-align: center;
@@ -18,28 +21,55 @@
 
       .active {
         a,a:hover {
-          color: #000000;
+          color: @navbar-color-active;
           background-color: transparent;
         }
         a {
-          color: #000000;
+          color: @navbar-color-active;
         }
       }
       li {
         a {
           &:hover {
-            color: #000000;
+            color: @navbar-color-active;
           }
-          color: #ffffff;
-          font-weight: bold;
+
+          color: @navbar-color;
+          font-size: 14px;
         }
       }
     }
+  }
+  .navbar-right {
+      font-size: 12px;
+      .brand-link {
+          padding: 0 8px;
+          border-left: 2px dotted @navbar-color;
+      }
+      .board-menu {
+          .brand-link {
+            border-left: none;  
+          }
+          select {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            direction: rtl;
+        }
+      }
   }
   .navbar-toggle-left {
     float: left;
     margin-left: 15px;
     margin-right: 0;
+
+    border: none;
+    &:hover {
+
+    }
+    li {
+
+    }
   }
 
   .navbar-brand {
