Full layout Part 1.

--- a/public/assets/portal/css/style.css
+++ b/public/assets/portal/css/style.css
@@ -1061,6 +1061,7 @@ input.cmn-toggle-round:checked + label:after {
     -moz-transition: background 0.4s;
     -o-transition: background 0.4s;
     transition: background 0.4s;
+    z-index: 1500;
 }
 .layer-loading-block div {
     position: absolute;
