Added margin to body.

--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1368,6 +1368,9 @@
 .bet .settings-hidden {
   display: none;
 }
+.bet .main-contend {
+  margin-top: 120px;
+}
 .bs-wp {
   /* Form Login */
   /* Align PopHovers */
