--- a/resources/assets/less/old.less
+++ b/resources/assets/less/old.less
@@ -1,4 +1,8 @@
 .bet {
   @import (less) "../../../public/assets/portal/css/style.css";
   @import (less) "../../../public/assets/portal/css/user-settings.css";
+  
+  .main-contend {
+    margin-top: 120px;
+  }
 }
