--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -80,6 +80,10 @@
       }
       li {
         a {
+          &:active:focus {
+            background-color: transparent;
+            outline: none;
+            }
           &:hover {
             color: @navbar-color-active;
           }
