--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -66,6 +66,9 @@
         .nav-onscroll {
             display: none;
         }
+        .board-menu-option{
+            margin: 5px 0;
+        }
         li{
             a {
                 padding: 5px 8px;
