--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,4 +1,5 @@
 @import (less) "old.less";
+
 @navbar-color-active: #cccccc;
 @navbar-color: #ffffff;
 @navbar-back-color: #112149;
@@ -8,38 +9,38 @@
 @btn-brand-border-color: #ddd;
 
 .bs-wp {
-    .btn-brand {
-        background-color: transparent;
-        color: @btn-brand-color;
-        border-color: @btn-brand-color;
-        border: 2px solid @btn-brand-border-color;
-        border-radius: 10px; 
-        &:hover {
-            color: @btn-brand-color-hover;
-            border-color: #adadad;
-        }
-        &,
-        &:focus,
-        &:active:focus {
-            outline: none;
-        }
+  .btn-brand {
+    background-color: transparent;
+    color: @btn-brand-color;
+    border-color: @btn-brand-color;
+    border: 2px solid @btn-brand-border-color;
+    border-radius: 10px;
+    &:hover {
+      color: @btn-brand-color-hover;
+      border-color: #adadad;
     }
-    .btn-slim {
-        font-size: 14px;
-        font-weight: bold;
-        width: 150px;
-        padding: 3px 15px;
+    &,
+    &:focus,
+    &:active:focus {
+      outline: none;
     }
-    
-    .btn-clean {
-        color: @btn-brand-color;
-        border: none;
-        &:hover {
-            color: @btn-brand-color-hover;
-            border-color: #adadad;
-        }
+  }
+  .btn-slim {
+    font-size: 14px;
+    font-weight: bold;
+    width: 150px;
+    padding: 3px 15px;
+  }
+
+  .btn-clean {
+    color: @btn-brand-color;
+    border: none;
+    &:hover {
+      color: @btn-brand-color-hover;
+      border-color: #adadad;
     }
-    
+  }
+
   nav {
     display: block;
   }
@@ -51,63 +52,69 @@
     left: 0;
     right: 0;
     &.navbar-2nd {
-        top: 71px;
-        border: none;
-        border-radius: 0;
-        padding: 10px 0;
-        .navbar-brand {
-            height: 30px;
-            padding: 0 5px;
-            img {
-               height: 30px;
-            }
+      top: 71px;
+      border: none;
+      border-radius: 0;
+      padding: 10px 0;
+      .navbar-brand {
+        height: 30px;
+        padding: 0 5px;
+        img {
+          height: 30px;
         }
-        .navbar-brand,
-        .nav-onscroll {
-            display: none;
+      }
+      .navbar-brand,
+      .nav-onscroll {
+        display: none;
+      }
+      .board-menu-option {
+        margin: 5px 0;
+      }
+      li {
+        a {
+          padding: 5px 8px;
         }
-        .board-menu-option{
-            margin: 5px 0;
+      }
+      .col-xs-1 {
+        padding: 0 10px;
+      }
+      @media (max-width: 1199px) {
+        .col-xs-5,
+        .col-xs-4 {
+          padding: 0 5px;
         }
-        li{
-            a {
-                padding: 5px 8px;
-            }
+
+        li a {
+          padding: 5px 8px;
         }
-        @media (max-width: 1199px){
-            .col-xs-5,
-            .col-xs-4 {
-                padding: 0 5px;
-            }
-            li a {
-                padding: 5px 8px;
-            }
-            .btn-slim {
-                font-size: 12px;
-                width: 90px;
-            }
+
+        .btn-slim {
+          font-size: 12px;
+          width: 90px;
         }
-        @media (max-width: 991px){
-            li a {
-                padding: 5px 5px;
-            }
-            .btn-slim {
-                padding: 5px 5px;
-                font-size: 10px;
-                width: 60px;
-            }
+      }
+      @media (max-width: 991px) {
+        li a {
+          padding: 5px 5px;
         }
+
+        .btn-slim {
+          padding: 5px 5px;
+          font-size: 10px;
+          width: 60px;
+        }
+      }
     }
     .navbar-collapse {
       text-align: center;
     }
-    .navbar-nav, {
+    .navbar-nav {
       display: inline-block;
       float: none;
       vertical-align: top;
 
       .active {
-        a,a:hover {
+        a, a:hover {
           color: @navbar-color-active;
           background-color: transparent;
         }
@@ -120,7 +127,7 @@
           &:active:focus {
             background-color: transparent;
             outline: none;
-            }
+          }
           &:hover {
             color: @navbar-color-active;
           }
@@ -131,24 +138,30 @@
       }
     }
   }
-  
+  .navbar-fright,
   .navbar-right {
-      font-size: 12px;
+    font-size: 12px;
+    float: right;
+    .brand-link {
+      padding: 0 8px;
+      border-left: 2px dotted @navbar-color;
+    }
+    @media (max-width: 991px) {
       .brand-link {
-          padding: 0 8px;
-          border-left: 2px dotted @navbar-color;
+        padding: 0 5px;
       }
-      .board-menu {
-          .brand-link {
-            border-left: none;  
-          }
-          select {
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            direction: rtl;
-        }
+    }
+    .board-menu {
+      .brand-link {
+        border-left: none;
       }
+      select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        direction: rtl;
+      }
+    }
   }
   .navbar-toggle-left {
     float: left;
@@ -169,33 +182,44 @@
       height: 44px;
     }
   }
-  
+
   /* Form Login */
   #saveLoginForm {
-      display: none;
-      input {
-          margin: 0;
-      }
-      .btn-login-sub {
-          background-color: #efd83c;
-          color: #000000;
-          border: 1px solid #000000; 
-          font-size: 14px;
-          padding: 4px 0px;
-      }
-      > .col-xs-4 {
-          padding: 0 10px;
-      }
+    display: none;
+    input {
+      margin: 0;
+    }
+    .btn-login-sub {
+      background-color: #efd83c;
+      color: #000000;
+      border: 1px solid #000000;
+      font-size: 14px;
+      padding: 4px 0px;
+    }
+    > .col-xs-4 {
+      padding: 0 10px;
+    }
+    .botao-registar {
+      width: 100%;
+      font-size: 70%;
+    }
+    @media (max-width: 1199px) {
       .botao-registar {
-          width: 100%;
+        font-size: 60%;
       }
-      .btn-link {
-          font-size: 10px;
-          padding: 15px 0 0 15px;
-          &:hover{
-              color: @navbar-color;
-          }
+    }
+    @media (max-width: 991px) {
+      .botao-registar {
+        font-size: 50%;
       }
+    }
+    .btn-link {
+      font-size: 10px;
+      padding: 15px 0 0 15px;
+      &:hover {
+        color: @navbar-color;
+      }
+    }
   }
   /* Align PopHovers */
   .menu_user {
