--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -51,11 +51,13 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1001;
     &.navbar-2nd {
       top: 71px;
       border: none;
       border-radius: 0;
       padding: 10px 0;
+      z-index: 1000;
       .navbar-brand {
         height: 30px;
         padding: 0 5px;
@@ -229,5 +231,10 @@
   .menu_account {
     left: -25px;
     top: 28px;
+  }
+  .menu_comunica {
+    right: -90px;
+    top: 20px;
+    z-index: 1010;
   }
 }
