--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -136,6 +136,7 @@
 
           color: @navbar-color;
           font-size: 14px;
+          letter-spacing: 1px;
         }
       }
     }
@@ -144,9 +145,10 @@
   .navbar-right {
     font-size: 12px;
     float: right;
+    padding-right: 10px;
     .brand-link {
       padding: 0 8px;
-      border-left: 2px dotted @navbar-color;
+      border-left: 1px dashed @navbar-color;
     }
     @media (max-width: 991px) {
       .brand-link {
