Adjusted some settings.

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -1,6 +1,6 @@
 @import (less) "old.less";
 
-@navbar-color-active: #cccccc;
+@navbar-color-active: #edac00;
 @navbar-color: #ffffff;
 @navbar-back-color: #112149;
 
