Adjusted some settings.

--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1410,7 +1410,7 @@
 .bs-wp .navbar-default {
   padding: 10px 0;
   background-color: #112149;
-  border-color: #cccccc;
+  border-color: #2c2c2c;
   position: absolute;
   top: 0;
   left: 0;
