--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -48,7 +48,7 @@
   .navbar-default {
     padding: 10px 0;
     background-color: @navbar-back-color;
-    border-color: #2c2c2c;
+    border-color: rgba(115, 115, 115, 0.43);
     position: absolute;
     top: 0;
     left: 0;
